# IntroToOpenSourceLabs

Lab1/: Lab1.md  bio.md
Lab10/: checkpoint4.py  checkpoint5.py
Lab2/: Lab2.md
Lab3/: Lab3.md
Lab3/lab3part1/: README.md  first.py
Lab4/: Lab4.md  myfix.diff
Lab5/: Lab5.md
Lab5/Steps/Step1/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  main.cpp
Lab5/Steps/Step2/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  cmake_install.cmake  main.cpp
Lab5/Steps/Step2/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.cpp
Lab5/Steps/Step3/: Makefile
Lab5/Steps/Step3/MathFunctions/: mysqrt.cpp
Lab5/Steps/Step4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Tutorial  TutorialConfig.h.in  cmake_install.cmake
Lab5/Steps/Step4/MathFunctions/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mysqrt.hpp
Lab5/Steps/Step5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  install_manifest.txt  main.cpp
Lab5/Steps/Step5/MathFunctions/: CMakeLists.txt  CTestTestfile.cmake  MakeTable  MakeTable.cpp  Makefile  cmake_install.cmake  mysqrt.cpp
Lab6/: CustomTest.py alias  labreport6.md  markdown.py alias
Lab6/markdown.py/: CustomTest.py  markdown.py
Lab7/: OutFile.plist  ProcessGraph.py  WordLadder.cpp  a.out
Lab8/: lab8.R  lab8.md
Lab8/other method/: grad_students.R  lab8.md
Lab9/arduino_lab_lcd_ex/: arduino_lab_lcd_ex.ino
